templates/rekor_template.yaml
---
# Source: rekor/charts/trillian/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trillian-system
---
# Source: rekor/charts/trillian/templates/mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: "mysql"
    app.kubernetes.io/name: trillian
    app.kubernetes.io/instance: release-name
    helm.sh/chart: trillian-0.2.22
    app.kubernetes.io/managed-by: Helm
  name: trillian-mysql
  namespace: trillian-system
spec:
  ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app.kubernetes.io/component: "mysql"
    app.kubernetes.io/name: trillian
    app.kubernetes.io/instance: release-name
  type: "ClusterIP"
---
# Source: rekor/charts/trillian/templates/trillian-log-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: "trillian-logserver"
    app.kubernetes.io/name: trillian
    app.kubernetes.io/instance: release-name
    helm.sh/chart: trillian-0.2.22
    app.kubernetes.io/managed-by: Helm
  name: trillian-logserver
  namespace: trillian-system
spec:
  ports:
    - name: 8091-tcp
      port: 8091
      protocol: TCP
      targetPort: 8091
    - name: 8090-tcp
      port: 8090
      protocol: TCP
      targetPort: 8090
  selector:
    app.kubernetes.io/component: "trillian-logserver"
    app.kubernetes.io/name: trillian
    app.kubernetes.io/instance: release-name
  type: "ClusterIP"
---
# Source: rekor/charts/trillian/templates/trillian-log-signer/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: "trillian-logsigner"
    app.kubernetes.io/name: trillian
    app.kubernetes.io/instance: release-name
    helm.sh/chart: trillian-0.2.22
    app.kubernetes.io/managed-by: Helm
  name: trillian-logsigner
  namespace: trillian-system
spec:
  ports:
    - name: 8091-tcp
      port: 8091
      protocol: TCP
      targetPort: 8091
  selector:
    app.kubernetes.io/component: "trillian-logsigner"
    app.kubernetes.io/name: trillian
    app.kubernetes.io/instance: release-name
  type: "ClusterIP"
---
# Source: rekor/templates/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: "redis"
    app.kubernetes.io/name: rekor
    app.kubernetes.io/instance: release-name
    helm.sh/chart: rekor-1.3.21
    app.kubernetes.io/managed-by: Helm
  name: release-name-rekor-redis
  namespace: default
spec:
  ports:
    - name: 6379-tcp
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app.kubernetes.io/component: "redis"
    app.kubernetes.io/name: rekor
    app.kubernetes.io/instance: release-name
  type: "ClusterIP"
---
# Source: rekor/templates/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app.kubernetes.io/component: "server"
    app.kubernetes.io/name: rekor
    app.kubernetes.io/instance: release-name
    helm.sh/chart: rekor-1.3.21
    app.kubernetes.io/managed-by: Helm
  name: release-name-rekor-server
  namespace: default
spec:
  ports:
    - name: 3000-tcp
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: 2112-tcp
      port: 2112
      protocol: TCP
      targetPort: 2112
  selector:
    app.kubernetes.io/component: "server"
    app.kubernetes.io/name: rekor
    app.kubernetes.io/instance: release-name
  type: "ClusterIP"
---
# Source: rekor/charts/trillian/templates/mysql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: "mysql"
    app.kubernetes.io/name: trillian
    app.kubernetes.io/instance: release-name
    helm.sh/chart: trillian-0.2.22
    app.kubernetes.io/managed-by: Helm
  name: trillian-mysql
  namespace: trillian-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: "mysql"
      app.kubernetes.io/name: trillian
      app.kubernetes.io/instance: release-name
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  template:
    metadata:
      labels:
        app.kubernetes.io/component: "mysql"
        app.kubernetes.io/name: trillian
        app.kubernetes.io/instance: release-name
        helm.sh/chart: trillian-0.2.22
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: trillian-mysql
      containers:
        - name: trillian-mysql
          image: "gcr.io/trillian-opensource-ci/db_server@sha256:2a685a38dd0129cceb646c232d285383f614c7e6fa51ff8f512aef78e4298461"
          imagePullPolicy: "IfNotPresent"
          args:
            - --ignore-db-dir=lost+found
          ports:            
            - containerPort: 3306
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - /etc/init.d/mysql
              - status
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            exec:
              command:
              - /etc/init.d/mysql
              - status
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            {}
          volumeMounts:
            - name: storage
              mountPath: /var/lib/mysql
              subPath: 
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: trillian-mysql
---
# Source: rekor/charts/trillian/templates/trillian-log-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: "trillian-logserver"
    app.kubernetes.io/name: trillian
    app.kubernetes.io/instance: release-name
    helm.sh/chart: trillian-0.2.22
    app.kubernetes.io/managed-by: Helm
  name: trillian-logserver
  namespace: trillian-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: "trillian-logserver"
      app.kubernetes.io/name: trillian
      app.kubernetes.io/instance: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: "trillian-logserver"
        app.kubernetes.io/name: trillian
        app.kubernetes.io/instance: release-name
        helm.sh/chart: trillian-0.2.22
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: trillian-logserver
      containers:
        - name: trillian-trillian-logserver
          image: "ghcr.io/sigstore/scaffolding/trillian_log_server@sha256:34a87140ff88da3f8b83ef8f12575a5dc684afc79af880f148f45ca27f16e60e"
          imagePullPolicy: "IfNotPresent"
          args:
            - "--storage_system=mysql"
            - "--quota_system=mysql"
            - "--mysql_uri=$(MYSQL_USER):$(MYSQL_PASSWORD)@tcp($(MYSQL_HOSTNAME):$(MYSQL_PORT))/$(MYSQL_DATABASE)"
            - "--rpc_endpoint=0.0.0.0:8091"
            - "--http_endpoint=0.0.0.0:8090"
            - "--alsologtostderr"
          ports:            
            - containerPort: 8091
              protocol: TCP
            - containerPort: 8090
              protocol: TCP
          resources:
            {}
---
# Source: rekor/charts/trillian/templates/trillian-log-signer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: "trillian-logsigner"
    app.kubernetes.io/name: trillian
    app.kubernetes.io/instance: release-name
    helm.sh/chart: trillian-0.2.22
    app.kubernetes.io/managed-by: Helm
  name: trillian-logsigner
  namespace: trillian-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: "trillian-logsigner"
      app.kubernetes.io/name: trillian
      app.kubernetes.io/instance: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: "trillian-logsigner"
        app.kubernetes.io/name: trillian
        app.kubernetes.io/instance: release-name
        helm.sh/chart: trillian-0.2.22
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: trillian-logsigner
      containers:
        - name: trillian-trillian-logsigner
          image: "ghcr.io/sigstore/scaffolding/trillian_log_signer@sha256:ab97f7591e96e7ae1dbfea3bcc4b5f4b8ad13857e04779d8c6c2309cc432e5ce"
          imagePullPolicy: "IfNotPresent"
          args:
            - "--storage_system=mysql"
            - "--quota_system=mysql"
            - "--mysql_uri=$(MYSQL_USER):$(MYSQL_PASSWORD)@tcp($(MYSQL_HOSTNAME):$(MYSQL_PORT))/$(MYSQL_DATABASE)"
            - "--rpc_endpoint=0.0.0.0:8091"
            - "--http_endpoint=0.0.0.0:8090"
            - "--force_master=true"
            - "--alsologtostderr"
          ports:            
            - containerPort: 8091
              protocol: TCP
          resources:
            {}
---
# Source: rekor/templates/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: "redis"
    app.kubernetes.io/name: rekor
    app.kubernetes.io/instance: release-name
    helm.sh/chart: rekor-1.3.21
    app.kubernetes.io/managed-by: Helm
  name: release-name-rekor-redis
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: "redis"
      app.kubernetes.io/name: rekor
      app.kubernetes.io/instance: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: "redis"
        app.kubernetes.io/name: rekor
        app.kubernetes.io/instance: release-name
        helm.sh/chart: rekor-1.3.21
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: release-name-rekor-redis
      containers:
        - name: rekor-redis
          image: "docker.io/redis@sha256:c5a607fb6e1bb15d32bbcf14db22787d19e428d59e31a5da67511b49bb0f1ccc"
          imagePullPolicy: "IfNotPresent"
          args:
            - --bind
            - 0.0.0.0
            - --appendonly
            - "yes"
          ports:            
            - containerPort: 6379
              protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - test "$(redis-cli -h 127.0.0.1 ping)" = "PONG"
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            {}
          volumeMounts:
            - name: storage
              mountPath: /data
      volumes:
        - name: storage
          emptyDir: {}
---
# Source: rekor/templates/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: "server"
    app.kubernetes.io/name: rekor
    app.kubernetes.io/instance: release-name
    helm.sh/chart: rekor-1.3.21
    app.kubernetes.io/managed-by: Helm
  name: release-name-rekor-server
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: "server"
      app.kubernetes.io/name: rekor
      app.kubernetes.io/instance: release-name
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/config: 56fb411899d42fc40e5ba436c595703151e67e7f54d9c164e5b55f473dac9b9f
        checksum/sharding_config: 1cdab15bedac91fc5370db111037f3818e790555b308e2e0ae20fad45110c2ac
        prometheus.io/path: /metrics
        prometheus.io/port: "2112"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: "server"
        app.kubernetes.io/name: rekor
        app.kubernetes.io/instance: release-name
        helm.sh/chart: rekor-1.3.21
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: release-name-rekor-server
      containers:
        - name: rekor-server
          image: "gcr.io/projectsigstore/rekor-server@sha256:1237f29e2105d7f5451bbe15a3aca8677ddd1bb80620ca2fd06f74262437cf51"
          imagePullPolicy: "IfNotPresent"
          args:
            - "serve"
            - "--trillian_log_server.address=trillian-logserver.trillian-system"
            - "--trillian_log_server.port=8091"
            - "--trillian_log_server.sharding_config=/sharding/sharding-config.yaml"
            - "--redis_server.address=release-name-rekor-redis"
            - "--redis_server.port=6379"
            - "--rekor_server.address=0.0.0.0"
            - "--rekor_server.signer=memory"
            - "--enable_retrieve_api=true"
            - "--trillian_log_server.tlog_id=$(TREE_ID)"
            - "--enable_attestation_storage"
            - "--attestation_storage_bucket=file:///var/run/attestations"
          ports:            
            - containerPort: 3000
              protocol: TCP
            - containerPort: 2112
              protocol: TCP
          volumeMounts:
            - name: release-name-rekor-sharding-config
              mountPath: /sharding
            - name: storage
              mountPath: /var/run/attestations
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            {}
      securityContext:
        runAsNonRoot: true
        runAsUser: 65533
      volumes:
        - name: release-name-rekor-sharding-config
          configMap:
            name: release-name-rekor-sharding-config
        - name: storage
          persistentVolumeClaim:
            claimName: release-name-rekor-server
---
# Source: rekor/templates/server/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: "server"
    app.kubernetes.io/name: rekor
    app.kubernetes.io/instance: release-name
    helm.sh/chart: rekor-1.3.21
    app.kubernetes.io/managed-by: Helm
  name: release-name-rekor-server
  namespace: default
  annotations:
    {}
spec:
  ingressClassName: nginx
  rules:
    - host: "root"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-rekor-server
                port:
                  number: 80
